--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="example-one">Example One</a>
+                        <a href="example-one">About Me</a>
                     </li>
                     <li>
-                        <a href="example-two">Example Two</a>
+                        <a href="example-two">Work</a>
                     </li>
                     <li>
-                        <a href="example-three">Example Three</a>
+                        <a href="example-three">Contact Me</a>
+                    </li>
+                    <li>
+                        <a href="example-four">Resume</a>
                     </li>
                 </ul>
             </nav>
@@ -29,19 +32,25 @@
 
         <section id="example-one">
             <h2>
-                Application
+                About Me
             </h2>
         </section>
 
         <section id="example-two">
             <h2>
-                Site
+                Work
             </h2>
         </section>
 
         <section id="example-three">
             <h2>
-                Other Site
+                Contact Me
+            </h2>
+        </section>
+
+        <section id="example-four">
+            <h2>
+                Resume
             </h2>
         </section>
 
