--- a/index.html
+++ b/index.html
@@ -15,43 +15,54 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="example-one">About Me</a>
+                        <a href="#About-Me">About Me</a>
                     </li>
                     <li>
-                        <a href="example-two">Work</a>
+                        <a href="#Work">Work</a>
                     </li>
                     <li>
-                        <a href="example-three">Contact Me</a>
+                        <a href="#Contact-Me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="example-four">Resume</a>
+                        <a href="#Resume">Resume</a>
                     </li>
                 </ul>
             </nav>
         </header>
 
-        <section id="example-one">
-            <h2>
-                About Me
-            </h2>
+        <!-- hero -->
+        <section id="About-Me" class="sections">
+                <h2>
+                    About Me
+                </h2>
+            <p>
+                It could be said that if postconstructivist capitalism holds, we have to choose between social realism and neocapitalist sublimation. The subject is interpolated into a Batailleist `powerful communication’ that includes truth as a totality.
+            </p>
         </section>
 
-        <section id="example-two">
+        <section id="Work" class="sections">
             <h2>
                 Work
             </h2>
         </section>
 
-        <section id="example-three">
+        <section id="Contact-Me" class="sections">
             <h2>
                 Contact Me
             </h2>
+                <p>
+                    It could be said that if postconstructivist capitalism holds, we have to choose between social realism and neocapitalist sublimation. The subject is interpolated into a Batailleist `powerful communication’ that includes truth as a totality.
+                </p>
         </section>
 
-        <section id="example-four">
+        <section id="Resume" class="sections">
             <h2>
                 Resume
             </h2>
+                <p>
+                    It could be said that if postconstructivist capitalism holds, we have to choose between social realism and neocapitalist sublimation. The subject is interpolated into a Batailleist `powerful communication’ that includes truth as a totality.
+                </p>
+            </div>
         </section>
 
         <!-- footer -->
