add kickspro start

--- a/index.html
+++ b/index.html
@@ -32,18 +32,28 @@
 
         <!-- hero -->
         <section id="About-Me" class="sections">
-                <h2>
+            <h2>
                     About Me
-                </h2>
-            <p>
+            </h2>
+                <p>
                 It could be said that if postconstructivist capitalism holds, we have to choose between social realism and neocapitalist sublimation. The subject is interpolated into a Batailleist `powerful communication’ that includes truth as a totality.
-            </p>
+                </p>
         </section>
 
-        <section id="Work" class="sections">
+        <section id="Work" class="work-wrapper">
             <h2>
                 Work
             </h2>
+                <div class="work-grid">
+                    <a class="content-one" href="https://vasilyg10.github.io/soccer-stats/">
+                        <span class="work-info">
+                            <h3>Kicks Pro</h3>
+                            <span class="subtitle">
+                                HTML/Javascript
+                            </span>
+                        </span>
+                    </a>
+                </div>
         </section>
 
         <section id="Contact-Me" class="sections">
