add google global site tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <meta charset="UTF-8" />
         <title>Danny Cheever's Portfolio</title>
         <link rel="stylesheet" href="./assets/styles.css" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JV6LQZ17P4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JV6LQZ17P4');
+</script>
     </head>
     <body>
         <!-- navigation -->
