added second project, still looks terrible

--- a/index.html
+++ b/index.html
@@ -54,14 +54,30 @@
                 Work
             </h2>
                 <div class="work-grid">
-                    <a class="content-one" href="https://vasilyg10.github.io/soccer-stats/">
-                        <span class="work-info">
+                    <div>
+                    <a class="content-one">
+                        <img src="assets/kickspro.png" width="300" height="200">
+                    </a>
+                        <span class="work-info" href="https://vasilyg10.github.io/soccer-stats/">
                             <h3>Kicks Pro</h3>
                             <span class="subtitle">
                                 HTML/Javascript
                             </span>
                         </span>
+                    </div>
+                    <br>
+                    <br>
+                    <div>
+                    <a class="content-one">
+                        <img src="assets/celiac-tackboard.jpg" width="300" height="200">
                     </a>
+                        <span class="work-info" href="https://polar-brook-06864.herokuapp.com/">
+                            <h3>Celiac-Tackboard</h3>
+                            <span class="subtitle">
+                                HTML/Javascript/Handlebars/Bulma/MySql/Sequelize/Express.js
+                            </span>
+                        </span>
+                    </div>
                 </div>
         </section>
 
